--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=auth-service
+
+# ===============================
+# SERVER CONFIG
+# ===============================
+server.port=8083
+
+# ===============================
+# DATABASE CONFIG (PostgreSQL)
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
