--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Kafka broker
+spring.kafka.bootstrap-servers=localhost:9092
+
+# Producer configuration
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
